--- a/style/main.css
+++ b/style/main.css
@@ -76,6 +76,7 @@ html {
 .nav_menu ul li a {
   text-decoration: none;
   text-transform: uppercase;
+  letter-spacing: 0.5px;
   font-size: 1.2rem;
   color: #fff;
   padding: 0.2rem 0.4rem;
@@ -88,6 +89,7 @@ html {
 
 .nav_menu ul li a.menu-link_contacto {
   color: #e9b44c;
+  font-weight: 600;
 }
 
 .btn_menu {
@@ -134,7 +136,7 @@ html {
 .text {
   position: absolute;
   z-index: 10;
-  background-color: rgba(0, 0, 0, 0.287);
+  background-color: rgba(8, 65, 92, 0.226);
   padding: 3rem 1.5rem;
   transition: all 0.3s ease-in-out;
 }
@@ -167,7 +169,7 @@ html {
   font-size: 1.2rem;
   font-weight: 800;
   text-decoration: none;
-  color: #fff;
+  color: #333;
   width: 19rem;
   height: 4rem;
   text-transform: uppercase;
