--- a/style/main.css
+++ b/style/main.css
@@ -282,3 +282,15 @@ html {
   object-fit: cover;
   opacity: 0.8;
 } */
+
+/* ******************* */
+/* Proyecto  */
+/* ******************* */
+
+h1 {
+  font-size: 4.6rem;
+}
+
+section h2 {
+  font-size: 2.3rem;
+}
