--- a/style/medias.css
+++ b/style/medias.css
@@ -28,6 +28,10 @@
     display: flex;
   }
 
+  .text {
+    padding: 3rem 1.5rem 3rem 0;
+  }
+
   .text h2 {
     font-size: 3.5rem;
   }
@@ -38,10 +42,13 @@
 
   .text p {
     font-size: 1rem;
+    max-width: 33rem;
   }
 
-  .text a {
-    background-color: #e9b44c;
+  .control_audio {
+    left: 2rem;
+    bottom: 5rem;
+    padding: 2rem 0;
   }
 }
 
