Se deja al icono de youtube con color para distinguir esta rama de la rama master mas facilmente.

--- a/style/main.css
+++ b/style/main.css
@@ -249,6 +249,10 @@ html {
   transform: translateY(-5px);
 }
 
+.social li a .youtube {
+  fill: crimson;
+}
+
 .menu {
   position: absolute;
   top: 0;
