--- a/style/proyecto.css
+++ b/style/proyecto.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Nixie+One&display=swap");
 
 /* ******************* */
-/* Proyecto */
+/* Clases globales */
 /* ******************* */
 
 :root {
@@ -24,6 +24,17 @@
 html {
   font-size: 62.5%;
   overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow: hidden;
+  scroll-behavior: smooth;
+  position: relative;
+}
+
+.showBody {
+  right: 30rem;
 }
 
 h1 {
@@ -35,7 +46,135 @@ h1 {
 section {
   min-width: 100vw;
   min-height: 100vh;
-  padding: 2rem 1rem;
+  padding: 8rem 1rem 2rem 1rem;
+  overflow-x: hidden;
+}
+
+/* ******************* */
+/* Header - Nav */
+
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8rem;
+  z-index: 9999;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 5rem;
+  background-color: var(--color-bgc-principal);
+  /* border-bottom: solid 1px var(--color-principal); */
+}
+
+.logo {
+  width: 18rem;
+  height: 6rem;
+  margin-right: 2.5rem;
+}
+
+.header .logo_img {
+  position: relative;
+  width: 18rem;
+  height: 6rem;
+  object-fit: contain;
+}
+
+.showBody .header .logo_img {
+  left: -30rem;
+}
+
+.nav_menu {
+  display: flex;
+  margin: 1.8rem 0 1.8rem auto;
+}
+
+.nav_menu ul {
+  display: flex;
+  gap: 2rem;
+  list-style: none;
+}
+
+.nav_menu ul li a {
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  font-size: 1.2rem;
+  color: #fff;
+  padding: 0.2rem 0.4rem;
+  transition: all 0.3s ease;
+}
+
+.nav_menu ul li a:hover {
+  color: #e9b44c;
+}
+
+.nav_menu ul li a.menu-link_contacto {
+  color: #e9b44c;
+  font-weight: 600;
+}
+
+/* ******************* */
+/* Menú responsive */
+.btn_menu {
+  display: none;
+}
+
+.btn_menu.active {
+  background: url("/img/close.png");
+  background-repeat: no-repeat;
+  background-size: 2.5rem;
+  background-position: center;
+  cursor: pointer;
+
+  position: absolute;
+  right: 30rem;
+  z-index: 9999;
+}
+
+.menu {
+  position: absolute;
+  top: 0;
+  right: -30rem;
+  width: 30rem;
+  height: 100vh;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: darkgoldenrod;
+
+  display: none;
+}
+
+.active {
+  display: flex;
+  right: 0;
+  overflow: hidden;
+}
+
+.menu ul {
+  position: relative;
+  list-style: none;
+}
+
+.menu ul li {
+  margin: 1rem 0;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  font-size: 2.6rem;
+  color: #e9b44c;
+}
+
+.menu ul li a:hover {
+  color: #fff;
+}
+
+.menu ul li a.menu-link_contacto {
+  color: #fff;
 }
 
 /* ******************* */
@@ -63,9 +202,9 @@ section {
 
 .proyecto_img {
   width: 85vw;
-  min-height: 80vh;
+  /* min-height: 80vh; */
   margin: auto;
-  padding: 3rem 0 5rem 0;
+  padding: 3rem 0;
 }
 
 .proyecto_img img {
@@ -76,7 +215,7 @@ section {
 .proyecto_descripcion {
   width: 85vw;
   margin: auto;
-  padding: 1rem 0;
+  padding: 2rem 0;
   color: #fff;
   font-size: 1.8rem;
 }
@@ -167,4 +306,27 @@ section {
   display: flex;
   align-items: center;
   gap: 1rem;
+}
+
+/* medias querys */
+@media only screen and (max-width: 798px) {
+  .planta_container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .planta_container {
+    min-height: 0;
+  }
+}
+
+@media only screen and (max-height: 450px) {
+  /* .btn_menu.active {
+    right: 27%;
+  } */
+
+  .menu ul li {
+    margin: 0.5rem 0;
+  }
 }
