Queda completa la sección de Galería con su lightbox para mostrar completa la galería de imagenes. Se continúa con el despliegue de la pádina en Hostinger y se continuará en el siguiente commit con las funciones para las plantas así como los focus, sección de contactos al pie de página.

--- a/style/medias.css
+++ b/style/medias.css
@@ -1,6 +1,6 @@
 /** @format */
 
-/* Lnading Page */
+/* Landing Page */
 @media only screen and (max-width: 798px) {
   html {
     font-size: 56.25%;
