--- a/style/galeria.css
+++ b/style/galeria.css
@@ -1,8 +1,18 @@
-/**
- * /* *******************
- *
- * @format
- */
+/** @format */
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800&family=Nixie+One&display=swap");
+
+/* ******************* */
+/* Clases globales */
+/* ******************* */
+
+:root {
+  --color-principal: #e9b44c;
+  --color-secundario: #444444;
+  --color-bgc-principal: #353535;
+  --color-bgc-secundario: #e5e2e2;
+  --color-textos: #333333;
+}
 
 /* galeria */
 
@@ -24,4 +34,114 @@
   bottom: -10px;
   left: 50%;
   transform: translate(-50%);
+}
+
+/* Galeria */
+#galery {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  max-width: 70rem;
+  min-width: 40rem;
+  padding: 0 1rem;
+  margin: auto;
+  z-index: 10000;
+  align-items: center;
+}
+
+#galery img {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* medias querys */
+@media only screen and (max-width: 768px) {
+  #galery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1rem;
+  }
+}
+
+/* Contenedor Principal */
+#contenedor-principal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.865);
+}
+
+#contenedor-interno {
+  width: 80vw;
+  height: 90vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  position: relative;
+  border-radius: 4px;
+}
+
+#img-activa {
+  width: 100%;
+  height: auto;
+  border-radius: 4px;
+  object-fit: cover;
+}
+
+/* Botones */
+button {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  color: #f2f2f2;
+  font-weight: 300;
+}
+
+#btn-cierra {
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+  font-size: 3rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.562);
+  font-weight: 400;
+}
+
+#btn-retrocede,
+#btn-adelanta {
+  position: absolute;
+  font-size: 3rem;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.562);
+  transform: translate(0, -50%);
+}
+
+button span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#btn-retrocede {
+  top: 50%;
+  left: 1rem;
+}
+
+#btn-adelanta {
+  top: 50%;
+  right: 1rem;
 }
