Commit desde el master se hizo merge en MASTER de -> Proyecto, se procede a hacer despliegue de la página en hostinger 3 Dic 21

--- a/style/main.css
+++ b/style/main.css
@@ -247,13 +247,13 @@ html {
   transform: translateY(-5px);
 }
 
-.social li a .youtube {
+/* .social li a .youtube {
   fill: crimson;
 }
 
 .social li a .instagram {
   fill: darkmagenta;
-}
+} */
 
 .menu {
   position: absolute;
