--- a/style/galeria.css
+++ b/style/galeria.css
@@ -14,8 +14,9 @@
   --color-textos: #333333;
 }
 
-/* galeria */
-
+/* ******************* */
+/* Galería */
+/* ******************* */
 .galeria {
   background-color: var(--color-bgc-secundario);
   padding-bottom: 8rem;
@@ -36,12 +37,10 @@
   transform: translate(-50%);
 }
 
-/* Galeria */
 #galery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  /* max-width: 70rem; */
   width: 85vw;
   min-width: 40rem;
   padding: 0 1rem;
@@ -68,7 +67,7 @@
   display: none;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.865);
+  background-color: rgba(0, 0, 0, 0.891);
 }
 
 #contenedor-interno {
@@ -78,7 +77,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  z-index: 99;
   position: relative;
   border-radius: 4px;
 }
@@ -102,13 +101,14 @@ button {
 #btn-cierra {
   position: absolute;
   top: 3rem;
-  right: 3rem;
-  font-size: 3rem;
-  width: 4rem;
-  height: 4rem;
+  right: 4rem;
+  width: 4.8rem;
+  height: 4.8rem;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.562);
+  font-size: 3.6rem;
+  color: #e9b44c;
   font-weight: 400;
+  z-index: 9999;
 }
 
 #btn-retrocede,
@@ -120,6 +120,7 @@ button {
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.562);
   transform: translate(0, -50%);
+  z-index: 999;
 }
 
 button span {
@@ -136,21 +137,4 @@ button span {
 #btn-adelanta {
   top: 50%;
   right: 1rem;
-}
-
-/* medias querys */
-@media only screen and (max-width: 1024px) {
-  #galery {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  #galery {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1rem;
-  }
 }
