--- a/style/proyecto.css
+++ b/style/proyecto.css
@@ -33,6 +33,9 @@ body {
   position: relative;
 }
 
+/* ******************* */
+/* Clase auxiliar para menú responsive */
+/* ******************* */
 .showBody {
   right: 0;
 }
@@ -46,14 +49,13 @@ h1 {
 
 section {
   min-width: 100vw;
-  /* min-height: 100vh; */
   padding: 10rem 1rem 2rem 1rem;
   overflow-x: hidden;
 }
 
 /* ******************* */
 /* Header - Nav */
-
+/* ******************* */
 .header {
   position: fixed;
   top: 0;
@@ -113,6 +115,7 @@ section {
 
 /* ******************* */
 /* Menú responsive */
+/* ******************* */
 .btn_menu {
   display: none;
 }
@@ -176,6 +179,7 @@ section {
 
 /* ******************* */
 /* Overlay - Menú responsive */
+/* ******************* */
 .overlay {
   position: absolute;
   top: 0;
@@ -194,8 +198,8 @@ section {
 }
 
 /* ******************* */
-/* Proyecto */
-
+/* Sección Proyecto */
+/* ******************* */
 .proyecto {
   background-color: var(--color-bgc-principal);
   padding-bottom: 4rem;
@@ -245,8 +249,8 @@ section {
 }
 
 /* ******************* */
-/* Amenidades */
-
+/* Sección Amenidades */
+/* ******************* */
 .amenidades {
   background-color: var(--color-bgc-secundario);
   padding-bottom: 4rem;
@@ -294,8 +298,8 @@ section {
 }
 
 /* ******************* */
-/* Planta */
-
+/* Sección Planta */
+/* ******************* */
 .planta {
   background-color: var(--color-bgc-principal);
   padding-bottom: 4rem;
@@ -359,64 +363,4 @@ section {
   display: flex;
   align-items: flex-start;
   gap: 1rem;
-}
-
-/* medias querys */
-@media only screen and (max-width: 768px) {
-  html {
-    font-size: 56.25%;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-  }
-
-  .amenidades__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .amenidades__container-funo {
-    min-width: 30rem;
-  }
-  .amenidades__container-fdos {
-    min-width: 30rem;
-  }
-  .amenidades__container-ftres {
-    min-width: 30rem;
-  }
-
-  .container__planta {
-    flex-direction: column;
-    align-items: center;
-    gap: 3rem;
-  }
-
-  .planta_descripcion {
-    width: 80%;
-  }
-
-  .planta_img {
-    width: 90%;
-  }
-}
-
-@media only screen and (max-width: 480px) {
-  html {
-    font-size: 50%;
-  }
-  /* funciona para quitar el logo al abrir menu hamburguesa */
-  .showBody .header .logo_img {
-    left: -30rem;
-  }
-}
-
-@media only screen and (max-height: 450px) {
-  /* .btn_menu.active {
-    right: 27%;
-  } */
-
-  .menu ul li {
-    margin: 0.5rem 0;
-  }
 }
