--- a/style/focus_modal.css
+++ b/style/focus_modal.css
@@ -43,6 +43,13 @@
   left: 40%;
 }
 
+.plantas a {
+  display: flex;
+  color: transparent;
+  width: 2.6rem;
+  height: 2.6rem;
+}
+
 /* ******************* */
 /* focus - modal de fotos planta */
 .plafocus {
