--- a/style/main.css
+++ b/style/main.css
@@ -13,6 +13,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html {
@@ -102,6 +103,11 @@ html {
   font-weight: 600;
 }
 
+.nav_menu ul li a.menu-link_contacto:hover {
+  font-size: 1.21rem;
+  color: #f2d294;
+}
+
 .btn_menu {
   display: none;
 }
@@ -185,6 +191,7 @@ html {
   font-weight: 800;
   text-decoration: none;
   color: #fff;
+  color: #e9b44c;
   width: 19rem;
   height: 4rem;
   text-transform: uppercase;
