--- a/style/medias.css
+++ b/style/medias.css
@@ -5,6 +5,10 @@
 /* ******************* */
 /* Break Point 1024px */
 @media only screen and (max-width: 1024px) {
+  * {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+
   .proyecto_img {
     width: 80vw;
   }
@@ -105,6 +109,7 @@
 
   .planta_descripcion {
     width: 80%;
+    margin-top: 2rem;
   }
 
   .planta_img {
