--- a/style/proyecto.css
+++ b/style/proyecto.css
@@ -19,6 +19,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 html {
@@ -325,6 +326,28 @@ section {
   justify-content: space-evenly;
   margin: 7rem 0;
   gap: 1rem;
+}
+
+.planta_medidas {
+  display: flex;
+  align-items: center;
+  margin: 1rem;
+  gap: 0.5rem;
+}
+
+.planta_medidas .size {
+  font-size: 2.6rem;
+  margin: 1rem;
+  color: var(--color-principal);
+}
+
+.planta_medidas p {
+  font-size: 2.1rem;
+  color: var(--color-bgc-secundario);
+}
+
+.planta_medidas .m2 {
+  font-size: 1.2rem;
 }
 
 .planta_img {
