--- a/style/main.css
+++ b/style/main.css
@@ -104,7 +104,6 @@ html {
 }
 
 .nav_menu ul li a.menu-link_contacto:hover {
-  font-size: 1.21rem;
   color: #f2d294;
 }
 
@@ -191,7 +190,6 @@ html {
   font-weight: 800;
   text-decoration: none;
   color: #fff;
-  color: #e9b44c;
   width: 19rem;
   height: 4rem;
   text-transform: uppercase;
@@ -268,7 +266,7 @@ html {
 /* Menú responsive */
 /* ******************* */
 .menu {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   width: 30rem;
