Se procede a realiar el 5to despliegue del sitio wen, quedando completo y funcionando al 100, Las mejoras en ese commit son: backgroun de caracoles, margin responsives en h1 optimizados, tamaño de imagen proyecto mas pequeña

--- a/style/galeria.css
+++ b/style/galeria.css
@@ -144,6 +144,10 @@ button span {
 /* ******************* */
 .avance {
   background-color: var(--color-bgc-principal);
+  background: url(/img/conchas.png) var(--color-bgc-principal);
+  background-repeat: repeat;
+  background-size: 460px;
+  background-blend-mode: multiply;
   padding-bottom: 8rem;
 }
 
