--- a/style/medias.css
+++ b/style/medias.css
@@ -9,10 +9,6 @@
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
 
-  .proyecto_img {
-    width: 80vw;
-  }
-
   #galery {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -27,6 +23,11 @@
     overflow-x: hidden;
     scroll-behavior: smooth;
   }
+
+  h1 {
+    margin: 0 0 6rem 0;
+  }
+
   /* Landing Page */
   .showcase,
   .showcase header {
@@ -194,5 +195,36 @@
   .focus_overlay .close {
     left: 91%;
     top: 10%;
+  }
+}
+
+/* Whatsapp */
+.whatsapp {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  width: 5.6rem;
+  height: 5.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #00ff7f;
+  border-radius: 50%;
+  z-index: 99999;
+  animation: shadow-pulse 1s infinite;
+}
+
+.whatsapp ion-icon {
+  width: 3.6rem;
+  height: 3.6rem;
+  fill: #fff;
+}
+
+@keyframes shadow-pulse {
+  0% {
+    box-shadow: 0 0 0 0 #00ff7f43;
+  }
+  100% {
+    box-shadow: 0 0 0 35px transparent;
   }
 }
