--- a/style/focus_modal.css
+++ b/style/focus_modal.css
@@ -108,8 +108,8 @@
 
 .focus_overlay .close {
   position: absolute;
-  height: 4.8rem;
-  width: 4.8rem;
+  height: 4.8%;
+  width: 4.8%;
   display: flex;
   align-items: center;
   justify-content: center;
