--- a/style/main.css
+++ b/style/main.css
@@ -63,6 +63,7 @@ html {
   width: 18rem;
   height: 6rem;
   margin-right: 2.5rem;
+  z-index: 10;
 }
 
 .showcase .logo_img {
@@ -133,19 +134,17 @@ html {
 
 .overlay {
   position: absolute;
+  display: none;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    180deg,
-    rgba(8, 65, 92, 0.208) 0%,
-    rgba(28, 17, 10, 0.208) 100%
-  );
+  background: transparent;
   mix-blend-mode: overlay;
 }
 
 .active_overlay {
+  display: block;
   z-index: 11;
   background-color: rgba(17, 17, 17, 0.461);
 }
