--- a/style/medias.css
+++ b/style/medias.css
@@ -25,7 +25,7 @@
   }
 
   h1 {
-    margin: 0 0 6rem 0;
+    margin: 0 0 7rem 0;
   }
 
   /* Landing Page */
@@ -117,6 +117,14 @@
     width: 90%;
   }
 
+  .container-slider {
+    width: 90%;
+  }
+
+  .slider {
+    height: 320px;
+  }
+
   /* Galería */
   #galery {
     display: grid;
@@ -129,7 +137,7 @@
   .footer {
     flex-direction: column;
     height: auto;
-    align-items: center;
+    /* align-items: center; */
     justify-content: center;
     padding: 5rem 0;
   }
@@ -138,7 +146,7 @@
   .enlaces {
     width: auto;
     min-width: 24rem;
-    margin: 0 auto;
+    /* margin: 0 auto; */
   }
 
   .footer_logo {
@@ -215,8 +223,8 @@
 /* Whatsapp */
 .whatsapp {
   position: fixed;
-  bottom: 4rem;
-  right: 2rem;
+  bottom: 2rem;
+  left: 2rem;
   width: 5.6rem;
   height: 5.6rem;
   display: flex;
